  * ChangeLog: add references to bug tracker IDs
  * BUGS: add note about bug tracking interface

* Tue Aug 09 02:27:57 2005, pabs <pabs@pablotron.org>
  * raggle: added 'log_content' option (defaults to false, re-enables
    excess logging in grab.log)
  * raggle: added preliminary Atom support 
  * raggle: added basic RSS enclosure support via a hook (basically 
    Raggle just blindly passes RSS enclosures off to a user-defined
    executable, specified by $config['enclosure_hook_url'])
  * raggle: add copius documentation for RSS enclosure hook, including
    little sample enclosure handler
  * doc/default_config.rb: regenerate, so it includes all the new stuff

* Tue Aug 09 04:18:34 2005, pabs <pabs@pablotron.org>
  * added po/ru_RU.po (Russian translation from "A@A" <linax@topol.dp.ua>)
  * AUTHORS: updated

* Tue Aug 09 14:14:52 2005, pabs <pabs@pablotron.org>
  * raggle: fix for terminal transparency issue (Fixes: #34)
    (also fixes the 200 day old bug on bugs.debian.org/raggle)

* Tue Aug 09 15:40:15 2005, pabs <pabs@pablotron.org>
  * added po/pl.po (polish translation from Piotr Ozarowski 
    <ozarow@gmail.com>)
  * AUTHORS: updated

* Wed Aug 10 16:49:34 2005, pabs <pabs@pablotron.org>
  * po/ru_RU.po: fix last-translator, and language-team
  * po/ru_RU.po: change project-id-version to 0.4.3
  * po/pl.po: ditto

* Wed Aug 10 16:52:18 2005, pabs <pabs@pablotron.org>
  * AUTHORS: fix author name

* Sat Aug 13 08:31:43 2005, pabs <pabs@pablotron.org>
  * raggle: apply modified version of clear desc fix from Michael

* Fri Sep 23 17:42:01 2005, pabs <pabs@pablotron.org>
  * raggle: don't die on invalid dc:date

* Fri Sep 23 17:51:58 2005, pabs <pabs@pablotron.org>
  * raggle: add Key::purge_deleted (purge all "deleted" items), bound to 
    'P' (shift-P) by default

* Sat Dec 10 15:55:34 2005, pabs <pabs@pablotron.org>
  * raggle: apply patch from Michael to fix closing edit window
    annoyance
  * AUTHORS: update to reflect above patch